force player to leave vehicle on mage Hulk Endermage #86